--- a/src/components/Form/Password/style.css
+++ b/src/components/Form/Password/style.css
@@ -6,6 +6,7 @@
 
 .password-field,
 .confirm-password-field {
+  position: relative;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
